kuma/static/styles/locales/ja.scss
@import '../includes/vars';

/*
Styles for Japanese
********************************************************************** */
/* stylelint-disable value-keyword-case  */


/* Bug 993702 */

@font-face {
    font-family: x-locale-body;
    font-weight: normal;
    src: /* All */
       local(mplus-2p-regular),
       local(KozGoPro-Regular),
       /* OS X */
       local(RyoGothicPlusN-Regular),
       local(HiraKakuPro-W3),
       /* Windows */
       local(Meiryo),
       local(MS-PGothic),
       /* Linux */
       local('VL PGothic regular'),
       local('TakaoPGothic Regular'),
       local('IPA P Gothic');
}

@font-face {
    font-family: x-locale-body;
    font-weight: bold;
    src: /* All */
       local(mplus-2p-bold),
       local(KozGoPro-Bold),
       /* OS X */
       local(RyoGothicPlusN-Bold),
       local(HiraKakuPro-W6),
       /* Windows */
       local(Meiryo-Bold),
       local(MS-PGothic),
       /* Linux */
       local('VL PGothic regular'),
       local('TakaoPGothic Regular'),
       local('IPA P Gothic');
}

/* Bug 973171 */
/* stylelint-disable declaration-no-important */
* {
    /* !important required for locale specific override */
    font-style: normal !important;
}

/* Bug 1522385 */
.syntaxbox {
    var,
    em {
        font-style: italic !important;
    }
}
/* stylelint-enable */

